2013-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.32 released.

        * More work on result block. Fixed when in use
          with FullAuto.


2013-06-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.31 released.

        * Documentation updated.


2013-06-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.30 released.

        * More work on result block. Documentation updated
          to illustrate use of Anonymous Subroutines with
          result items.


2013-06-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.29 released.

        * More work on result block. Documentation updated
          to illustrate use of Anonymous Subroutines with
          result items.


2013-06-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.28 released.

        * More work on result block. Documentation updated
          to illustrate use of closures with result items.


2013-06-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.27 released.

        * Fixed all items for tickets 84173 and 72041.
          Result block now works correctly for predefined
          subroutines, as explained in the documentation.


2013-06-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.26 released.

        * Fixed typo error in one of documentation examples.


2013-03-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.25 released.

        * Added warning and hint when fa_defs.pm cannot be read.


2012-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.24 released.

        * Happy New Year!

	* Use --login Id from FullAuto when running with
          FullAuto


2012-12-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.23 released.

        * 2.22 didn't have the updated Menus.pm.

