@@ -1,3 +1,12 @@
+2013-07-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.33 released.
+
+        * Menus with FullAuto can now dynamically authenticate.
+          This enables some items to be authenticated, and
+          other not.
+          
+
 2013-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.32 released.
